création de templates reset_password, mise en page de reset_password

--- a/.env
+++ b/.env
@@ -42,4 +42,5 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/symfony_myblog_afpa?serverVersion=5.7&
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 MAILER_DSN=smtp://localhost:1025
+#MAILER_DSN=smtp://921a14a00aca4a:e1bf655bc73860@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
