--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+# APP_ENV=prod
 APP_SECRET=ee658d43b14be8472357844321803e47
 ###< symfony/framework-bundle ###
 
