--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "doctrine/persistence": "2.4",
+        "easycorp/easyadmin-bundle": "^4.1",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "gedmo/doctrine-extensions": "*",
         "knplabs/knp-time-bundle": "^1.18",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.4",
