--- a/.env
+++ b/.env
@@ -45,3 +45,9 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/symfony_myblog_afpa?serverVersion=5.7&
 MAILER_DSN=smtp://localhost:1025
 #MAILER_DSN=smtp://921a14a00aca4a:e1bf655bc73860@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=34f15af52a1dd0e6d16891de9487b2d6
+###< lexik/jwt-authentication-bundle ###
