--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "friendsofsymfony/ckeditor-bundle": "^2.4",
         "gedmo/doctrine-extensions": "*",
         "knplabs/knp-time-bundle": "^1.18",
+        "lexik/jwt-authentication-bundle": "^2.15",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.4",
         "sensio/framework-extra-bundle": "^6.1",
